# NewCplusplusProject

./: .gitignore  CMakeLists.txt  Makefile  build.sh  main.cpp
.script/: boost.cmake  install.sh  nlohmann_json.cmake  prebuild.cmake  run.sh
script/: CMakeLists.txt  run.sh
